plugins {
	id 'java'
}

group = 'com.github.luddwichr'
version = '0.0.1'
sourceCompatibility = '11'

repositories {
	mavenCentral()
}

ext {
	jUnitVersion = '5.3.2'
	mockitoVersion = '2.23.4'
}

dependencies {
	testImplementation("org.assertj:assertj-core:3.11.1")
	testImplementation("org.junit.jupiter:junit-jupiter-api:${jUnitVersion}")
	testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${jUnitVersion}")
	testImplementation("org.mockito:mockito-core:${mockitoVersion}")
	testImplementation("org.mockito:mockito-junit-jupiter:${mockitoVersion}")
}

tasks.withType(Test) {
	useJUnitPlatform()
}
